Working on horizontal scrolling issue.
Removed it by add css and custom html container to the home page.
Added container to the projects checklist page.

--- a/my_website/projects/static/projects/style.css
+++ b/my_website/projects/static/projects/style.css
@@ -36,10 +36,9 @@ body, html {
     min-height: 100%;
 }
 
+/*Gets rid of the annoying horizontal scroll bar on the home page*/
 .container-no-margin {
-  width: inherit;
-/*  margin:0 ! important;
-  padding:0 ! important;*/
+  overflow-x: hidden;
 }
 
 /*Sets the border dividers to a custom color*/
